[gd_scene load_steps=6 format=3 uid="uid://cb1w8m4xtiiol"]

[ext_resource type="Script" uid="uid://3epug546vcyp" path="res://scripts/register.gd" id="1_th0y5"]
[ext_resource type="Texture2D" uid="uid://d18p0tafiraip" path="res://asserts/ui/fondo.png" id="2_n2w5e"]
[ext_resource type="FontFile" uid="uid://bsj04qcskhcmu" path="res://asserts/ui/Tagesschrift-Regular.ttf" id="3_i4ar7"]
[ext_resource type="Theme" uid="uid://bmf31mho1mjjt" path="res://scenes/UII/Sprout-Lands-UI-0.2.0/Sprout-Lands-UI-0.2.0/addons/sprout_lands_ui/content/sprout_lands_theme.tres" id="4_b7sfs"]

[sub_resource type="LabelSettings" id="LabelSettings_nw41r"]
line_spacing = 10.0
font = ExtResource("3_i4ar7")
font_size = 69
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.658824)

[node name="register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_th0y5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1150.0
texture = ExtResource("2_n2w5e")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1921.0
offset_bottom = 697.0
text = "Plaga de la Granja: Defensa al Amanecer"
label_settings = SubResource("LabelSettings_nw41r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 310.0
offset_right = 1917.0
offset_bottom = 658.0
text = "Register"
label_settings = SubResource("LabelSettings_nw41r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.038
anchor_top = 0.13
anchor_bottom = 0.317
offset_left = 906.96
offset_top = 471.6
offset_right = 1080.0
offset_bottom = 530.64
theme = ExtResource("4_b7sfs")

[node name="username" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "User name"

[node name="pass" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Password"

[node name="confirmpass" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Comfirm Password"

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sing up"

[node name="login" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="guest" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue as a guest"

[node name="exitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="text_set" from="VBoxContainer/username" to="." method="_on_username_text_set"]
[connection signal="text_set" from="VBoxContainer/pass" to="." method="_on_pass_text_set"]
[connection signal="text_set" from="VBoxContainer/confirmpass" to="." method="_on_confirmpass_text_set"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBoxContainer/guest" to="." method="_on_guest_pressed"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
